@@ -4,3 +4,7 @@ a_b_40%25_x_y</p>
 <p><a class="externallink" rel="nofollow" title="http://example.com/wiki/en/Test_Topic" href="http://example.com/wiki/en/Test_Topic">http://example.com/wiki/en/Test_Topic</a></p>
 <p>/wiki/en/Test_Topic</p>
 <p>a_b+40%25+x+y</p>
+<p>abcde fg</p>
+<p>aBcDe Fg</p>
+<p>ABCDE FG</p>
+<p>ABcDe Fg</p>
